# rk3566_face_register

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: main.cpp.BE7E2292C405F020.idx  main.cpp.C17B6F93F4B92D42.idx  net_socket.cpp.D6C12E4747FE18FD.idx  net_socket.h.A1D284B5553FD2FC.idx  tcp_client.cpp.7D138E21C907B272.idx  tcp_client.h.8B395D375BEFCEDF.idx  tcp_server.cpp.0C8D6936D598F26C.idx  tcp_server.h.FECA4553CAF197EE.idx  test_thread.cpp.0D7B965A4532D0D8.idx  test_thread.cpp.C2DAA8E57A9A9A4D.idx  udp.cpp.7ADA5E89A212087D.idx  udp.h.B12A5214067B7BDE.idx
assets/model/: RetinaFace_mobile320.rknn
cmake/: ExternalLibraries.cmake  arm-toolchain.cmake
config/: app.yaml
include/: OpencvPublic.h
model/faces/: face_gather.yml
python/: App.py  ClientConnect.py  Config.py  FlaskRequest.py  ImageStream.py  ImgSQLite.py  Socket.py  app.py  main.py  requirements.txt  server.py
python/static/css/: style.css
python/static/js/: stream.js
python/templates/: index.html
scripts/: arm-toolchain.cmake  enter_environment.bash
src/: CMakeLists.txt  main.cpp
src/app/: BackendSQLite.cpp  BackendSQLite.h  CMakeLists.txt  FaceTask.cpp  FaceTask.h  UserSQLite.cpp  UserSQLite.h  WebConnect.cpp  WebConnect.h  main.cpp
src/app/camera/: camera_uvc.cpp  camera_uvc.h  face_detection.cpp  face_detection.h  ffmpeg_mpp_encoder.cpp  ffmpeg_mpp_encoder.h  mpp_encoder.cpp  mpp_encoder.h  mpp_jpeg_decoder.cpp  mpp_jpeg_decoder.h
src/app/core/: face_task.cpp  face_task.h  web_connect.cpp  web_connect.h
src/app/database/: backend_sqlite.cpp  backend_sqlite.h  user_sqlite.cpp
src/app/db/: BackendSQLite.cpp  UserSQLite.cpp
src/app/model/: rknn_inference.cpp  train_model.cpp  train_model.h
src/app/model/rknn/: retinaface.cpp  retinaface.h
src/app/system/: socket.cpp  socket.h  thread_state.cpp  thread_state.h
src/app/task/: CaffeModel.cpp  CaffeModel.h  CameraUvc.cpp  CameraUvc.h  FaceDetection.cpp  FaceDetection.h  FaceTask.cpp  FaceTask.h  MppJpegDecoder.cpp  OpencvPublic.h  RnkkInference.cpp  RnkkInference.h  SafeQueue.h  Socket.cpp  Socket.h  Task.cpp  Task.h  ThreadPool.h  ThreadState.cpp  TrainModel.cpp  TrainModel.h  Web.cpp  Web.h
src/app/util/: Base64.cpp  Base64.h  File.cpp  File.h  HashBase62.cpp  InputCheck.cpp  InputCheck.h  LocalTime.cpp  LocalTime.h  Web.cpp  Web.h  base64.cpp  file_cpp.cpp  file_cpp.h  hash_base62.cpp  hash_base62.h  image_drawing.c  image_drawing.h  image_utils.c  image_utils.h  local_time.cpp  local_time.h  rknn_clip_utils.h  timestamp.cpp  timestamp.h
src/app/web_server/: CMakeLists.txt
src/app/web_server/inc/: server.h
src/app/web_server/src/: server.cpp
src/socket/: CMakeLists.txt  net_socket.cpp  net_socket.h  tcp_client.cpp  tcp_server.cpp  tcp_server.h  udp.cpp  udp.h
src/socket/inc/: tcp_client.h  tcp_server.h
src/socket/src/: tcp_client.cpp  udp.cpp
src/util/: CMakeLists.txt  net_socket.cpp  tcp_server.cpp  udp.h
tests/: CMakeLists.txt  test_thread.cpp
web/: ClientConnect.py  Config.py  ImgSQLite.py  RknnTransition.py  Socket.py  Util.py
web/static/js/: stream.js
web/templates/: index.html
